--- a/audio6_html5.css
+++ b/audio6_html5.css
@@ -1,11 +1,3 @@
-/*
-available controllers:
-	- whiteControllers
-	- blackControllers
-*/
-
-
-
 /* the container */
 .audio6_html5 {
 }
@@ -81,17 +73,17 @@ available controllers:
 	position:absolute;
 	right:0;
 	cursor:pointer;
-	background:url(controllers/whiteControllers/close-off.png) no-repeat;
+	background:url(https://i.ibb.co/gZ3RL2C/close-off.png) no-repeat;
 }
 .audio6_html5.whiteControllers .AudioCloseBut:hover {
-	background:url(controllers/whiteControllers/close-on.png) no-repeat;
+	background:url(https://i.ibb.co/PMR61kd/close-on.png) no-repeat;
 }
 
 .audio6_html5.whiteControllers .AudioOpenBut {
-	background:url(controllers/whiteControllers/open-off.png) no-repeat;
+	background:url(https://i.ibb.co/4NzVwzK/open-off.png) no-repeat;
 }
 .audio6_html5.whiteControllers .AudioOpenBut:hover {
-	background:url(controllers/whiteControllers/open-on.png) no-repeat;
+	background:url(https://i.ibb.co/MsVD8wb/open-on.png) no-repeat;
 }
 
 .audio6_html5.whiteControllers .AudioControls {
@@ -133,10 +125,10 @@ available controllers:
 	z-index:1;
 	width: 18px;
 	height: 18px;
-	background: url(controllers/whiteControllers/facebook-off.png) no-repeat;
+	background: url(https://i.ibb.co/hCc2XQ3/facebook-off.png) no-repeat;
 }
 .audio6_html5.whiteControllers .AudioFacebook:hover {
-    background: url(controllers/whiteControllers/facebook-on.png) no-repeat;
+    background: url(https://i.ibb.co/xX6TFzf/facebook-on.png) no-repeat;
 }
 
 .audio6_html5.whiteControllers .AudioTwitter {
@@ -148,10 +140,10 @@ available controllers:
 	z-index:1;
 	width: 18px;
 	height: 18px;
-	background: url(controllers/whiteControllers/twitter-off.png) no-repeat;
+	background: url(https://i.ibb.co/qdW1VnJ/twitter-off.png) no-repeat;
 }
 .audio6_html5.whiteControllers .AudioTwitter:hover {
-    background: url(controllers/whiteControllers/twitter-on.png) no-repeat;
+    background: url(https://i.ibb.co/k44Hc0N/twitter-on.png) no-repeat;
 }
 
 
@@ -165,10 +157,10 @@ available controllers:
 	padding:0;
 	width: 58px;
 	height: 58px;
-	background: url(controllers/whiteControllers/play-off.png) no-repeat;
+	background: url(https://i.ibb.co/GWqh9vV/pause-off.png) no-repeat;
 }
 .audio6_html5.whiteControllers .AudioPlay:hover {
-    background: url(controllers/whiteControllers/play-on.png) no-repeat;
+    background: url(https://i.ibb.co/GWqh9vV/pause-off.png) no-repeat;
 }
 
 
@@ -181,10 +173,10 @@ available controllers:
 	padding:0;
 	width: 58px;
 	height: 58px;
-	background: url(controllers/whiteControllers/pause-off.png) no-repeat;
+	background: url(https://i.ibb.co/GWqh9vV/pause-off.png) no-repeat;
 }
 .audio6_html5.whiteControllers .AudioPause:hover {
-	background: url(controllers/whiteControllers/pause-on.png) no-repeat;
+	background: url(https://i.ibb.co/GWqh9vV/pause-off.png) no-repeat;
 }
 
 
@@ -199,10 +191,10 @@ available controllers:
 	z-index:1;
 	width: 18px;
 	height: 18px;
-	background: url(controllers/whiteControllers/history-off.png) no-repeat;
+	background: url(https://i.ibb.co/nmxpQDj/history-off.png) no-repeat;
 }
 .audio6_html5.whiteControllers .AudioShowHidePlaylist:hover {
-    background: url(controllers/whiteControllers/history-on.png) no-repeat;
+    background: url(https://i.ibb.co/P9gxTTY/history-on.png) no-repeat;
 }
 
 
@@ -216,18 +208,18 @@ available controllers:
 	padding:0;
 	width: 18px;
 	height: 18px;
-	background: url(controllers/whiteControllers/volume-off.png) no-repeat;
+	background: url(https://i.ibb.co/dQ3Y1MQ/volume-off.png) no-repeat;
 	z-index: 1;
 }
 .audio6_html5.whiteControllers .VolumeButton:hover {
-	background: url(controllers/whiteControllers/volume-on.png) no-repeat;
+	background: url(https://i.ibb.co/cCysj1W/volume-on.png) no-repeat;
 }
 
 .audio6_html5.whiteControllers .VolumeButtonMuted {
-	background: url(controllers/whiteControllers/volumeMute-off.png) no-repeat;
+	background: url(https://i.ibb.co/V3hwKKz/volume-Mute-off.png) no-repeat;
 }
 .audio6_html5.whiteControllers .VolumeButtonMuted:hover {
-	background: url(controllers/whiteControllers/volumeMute-on.png) no-repeat;
+	background: url(https://i.ibb.co/khX6tpQ/volume-Mute-on.png) no-repeat;
 }
 
 /* volume slider */
@@ -409,8 +401,8 @@ available controllers:
 }
 
 .audio6_html5.whiteControllers .slider-vertical.ui-slider { position: relative;}
-.audio6_html5.whiteControllers .slider-vertical.ui-slider .ui-slider-handle { position: absolute; z-index: 2; width: 9px; height: 16px; cursor: pointer; background:url(controllers/whiteControllers/scrollerFaceOFF.png) 0 0 no-repeat; }
-.audio6_html5.whiteControllers .slider-vertical.ui-slider .ui-slider-handle:hover {  background:url(controllers/whiteControllers/scrollerFaceON.png) 0 0 no-repeat; }
+.audio6_html5.whiteControllers .slider-vertical.ui-slider .ui-slider-handle { position: absolute; z-index: 2; width: 9px; height: 16px; cursor: pointer; background:url(https://i.ibb.co/dm0BJ6x/scroller-Face-OFF.png) 0 0 no-repeat; }
+.audio6_html5.whiteControllers .slider-vertical.ui-slider .ui-slider-handle:hover {  background:url(https://i.ibb.co/9YF7tv6/scroller-Face-ON.png) 0 0 no-repeat; }
 .audio6_html5.whiteControllers .slider-vertical.ui-slider .ui-slider-range { position: absolute; z-index: 1; display: block; border: 0; }
 
 
@@ -431,384 +423,3 @@ available controllers:
 .audio6_html5.whiteControllers .slider-vertical.ui-corner-all {}
 
 /*  scroller end */
-
-
-
-
-
-
-
-
-
-/* blackControllers */
-.audio6_html5.blackControllers {
-	position: relative;
-	z-index:1;
-	font:11px Arial, Helvetica, sans-serif;
-	color:#FFF;
-	margin:0;
-	padding:0;
-}
-.audio6_html5.blackControllers * {
-	-webkit-duration:0s !important;
-	-moz-duration:0s !important;
-	-ms-duration:0s !important;
-	-o-duration:0s !important;
-	transition-duration:0s !important;
-}
-
-.audio6_html5.blackControllers .AudioCloseBut {
-	width:19px;
-	height:13px;
-	position:absolute;
-	right:0;
-	cursor:pointer;
-	background:url(controllers/blackControllers/close-off.png) no-repeat;
-}
-.audio6_html5.blackControllers .AudioCloseBut:hover {
-	background:url(controllers/blackControllers/close-on.png) no-repeat;
-}
-
-.audio6_html5.blackControllers .AudioOpenBut {
-	background:url(controllers/blackControllers/open-off.png) no-repeat;
-}
-.audio6_html5.blackControllers .AudioOpenBut:hover {
-	background:url(controllers/blackControllers/open-on.png) no-repeat;
-}
-
-.audio6_html5.blackControllers .AudioControls {
-	width: 100%;
-	margin:0;
-	padding:0;
-}
-
-.audio6_html5.blackControllers .frameBehindButtons {
-	position:absolute;
-	width: 100%;
-	height:34px;
-	margin:0;
-	padding:0;
-}
-
-.audio6_html5.blackControllers .frameBehindText {
-	position:absolute;
-	width: 100%;
-	margin:0;
-	padding:0;
-}
-
-
-.audio6_html5.blackControllers .ximage {
-	position:absolute;
-	display:block;
-	border-radius: 0;
-}
-
-
-
-.audio6_html5.blackControllers .AudioFacebook {
-	position:absolute;
-	cursor: pointer;
-	display: block;
-	margin:0;
-	padding:0;
-	z-index:1;
-	width: 18px;
-	height: 18px;
-	background: url(controllers/blackControllers/facebook-off.png) no-repeat;
-}
-.audio6_html5.blackControllers .AudioFacebook:hover {
-    background: url(controllers/blackControllers/facebook-on.png) no-repeat;
-}
-
-.audio6_html5.blackControllers .AudioTwitter {
-	position:absolute;
-	cursor: pointer;
-	display: block;
-	margin:0;
-	padding:0;
-	z-index:1;
-	width: 18px;
-	height: 18px;
-	background: url(controllers/blackControllers/twitter-off.png) no-repeat;
-}
-.audio6_html5.blackControllers .AudioTwitter:hover {
-    background: url(controllers/blackControllers/twitter-on.png) no-repeat;
-}
-
-
-
-/* play */
-.audio6_html5.blackControllers .AudioPlay {
-	position:absolute;
-	cursor: pointer;
-	display: block;
-	margin:0;
-	padding:0;
-	width: 58px;
-	height: 58px;
-	background: url(controllers/blackControllers/play-off.png) no-repeat;
-}
-.audio6_html5.blackControllers .AudioPlay:hover {
-    background: url(controllers/blackControllers/play-on.png) no-repeat;
-}
-
-
-/* pause */
-.audio6_html5.blackControllers .AudioPause {
-	position:absolute;
-	cursor: pointer;
-	display: block;
-	margin:0;
-	padding:0;
-	width: 58px;
-	height: 58px;
-	background: url(controllers/blackControllers/pause-off.png) no-repeat;
-}
-.audio6_html5.blackControllers .AudioPause:hover {
-	background: url(controllers/blackControllers/pause-on.png) no-repeat;
-}
-
-
-
-/*show/hide playlist */
-.audio6_html5.blackControllers .AudioShowHidePlaylist {
-	position:absolute;
-	cursor: pointer;
-	display: block;
-	margin:0;
-	padding:0;
-	z-index:1;
-	width: 18px;
-	height: 18px;
-	background: url(controllers/blackControllers/history-off.png) no-repeat;
-}
-.audio6_html5.blackControllers .AudioShowHidePlaylist:hover {
-    background: url(controllers/blackControllers/history-on.png) no-repeat;
-}
-
-
-
-/* volume button Mute & UnMute*/
-.audio6_html5.blackControllers .VolumeButton {
-	position:absolute;
-	cursor: pointer;
-	display: block;
-	margin:0;
-	padding:0;
-	width: 18px;
-	height: 18px;
-	background: url(controllers/blackControllers/volume-off.png) no-repeat;
-	z-index: 1;
-}
-.audio6_html5.blackControllers .VolumeButton:hover {
-	background: url(controllers/blackControllers/volume-on.png) no-repeat;
-}
-
-.audio6_html5.blackControllers .VolumeButtonMuted {
-	background: url(controllers/blackControllers/volumeMute-off.png) no-repeat;
-}
-.audio6_html5.blackControllers .VolumeButtonMuted:hover {
-	background: url(controllers/blackControllers/volumeMute-on.png) no-repeat;
-}
-
-/* volume slider */
-.audio6_html5.blackControllers .VolumeSlider {
-	position:absolute;
-	cursor: pointer;
-	display: block;
-	margin:0;
-	padding:0;
-	width:70px;
-	height:4px;
-}
-
-.audio6_html5.blackControllers .VolumeSlider .ui-slider-handle {
-	display:none;
-}
-
-.audio6_html5.blackControllers .VolumeSlider .ui-slider-handle.ui-state-hover {
-}
-
-.audio6_html5.blackControllers .VolumeSlider .ui-slider-range {
-	position:relative;
-	height:4px;
-}
-
-
-
-
-/*song Station & Title*/
-.audio6_html5.blackControllers .songTitle {
-	position:absolute;
-	float:left;
-	display: block;
-	overflow:hidden;
-	height:26px;
-	margin:0;
-	padding:0;
-	font-weight: normal;
-}
-
-.audio6_html5.blackControllers .songTitleInside {
-	position:absolute;
-	white-space: nowrap;
-	width:auto;
-	text-align:left;
-	font-family: 'PT Sans', sans-serif;
-	font-size:23px;
-	line-height:0.9em;
-	font-weight:normal;
-}
-
-.audio6_html5.blackControllers .songAuthor {
-	position:absolute;
-	display: block;
-	overflow:hidden;
-	height:17px;
-	margin:0;
-	padding:0;
-	line-height:1em;
-	font-family: 'PT Sans', sans-serif;
-	font-size:16px;
-	font-weight: normal;
-	text-align: left;
-}
-
-
-.audio6_html5.blackControllers .songAuthorLineSeparator {
-	position:absolute;
-	display: block;
-	height:1px;
-}
-
-
-.audio6_html5.blackControllers .radioStation {
-	position:absolute;
-	display: block;
-	overflow:hidden;
-	margin:0;
-	padding:0;
-	height:15px;
-	font-size:13px;
-	font-family: 'PT Sans', sans-serif;
-	line-height:1;
-	font-weight: normal;
-	text-align:left;
-}
-
-
-.audio6_html5.blackControllers .historyTitle {
-	position:absolute;
-	display: block;
-	overflow:hidden;
-	margin:0;
-	padding:0;
-	font-size:15px;
-	font-family: 'PT Sans', sans-serif;
-	text-transform:uppercase;
-	height:18px;
-	color:#858585;
-	line-height:1;
-	font-weight: normal;
-	text-align:left;
-}
-
-
-
-.audio6_html5.blackControllers .thumbsHolderWrapper {
-	position:absolute;
-	margin-top:0px;
-	overflow:hidden;
-}
-.audio6_html5.blackControllers .thumbsHolderVisibleWrapper {
-	position:relative;
-	height:100%;
-	overflow:hidden;
-	clear:both;/*new*/
-}
-.audio6_html5.blackControllers .thumbsHolder {
-	position:absolute;
-	text-align:left;
-}
-/* thumbsOFF */
-.audio6_html5.blackControllers .thumbsHolder_ThumbOFF {
-	display:block;
-	height:70px;
-	overflow:hidden;
-	border-bottom:1px solid;
-	border-bottom-color:transparent;
-	line-height:2.5em;
-}
-.audio6_html5.blackControllers .thumbsHolder_ThumbOFF  .padding {
-	padding:4px 0px 4px 0px;
-}
-.audio6_html5.blackControllers .thumbsHolder_ThumbOFF .titlex {
-	font-family: 'PT Sans', sans-serif;
-	letter-spacing:0.5px;
-	font-weight:normal;
-	display:inline-block;
-	font-size:18px;
-	line-height:1.5;
-	padding:0;
-	margin:0;
-	padding-bottom:0px;
-	overflow:hidden;
-	display:block;
-	border-bottom:1px solid;
-	border-bottom-color:transparent;
-}
-.audio6_html5.blackControllers .thumbsHolder_ThumbOFF .authorx {
-	font-family: 'PT Sans', sans-serif;
-	font-weight:normal;
-	font-size:14px;
-	line-height:2;
-	padding:0;
-	margin:0;
-	overflow:hidden;
-	display:block;
-}
-
-.audio6_html5.blackControllers .thumbsHolder_ThumbOFF .img_div {
-	position:relative;
-	background-repeat:no-repeat;
-	background-position:top center;
-	background-size:cover;
-	width: 55px;
-	height: 55px;
-	float: left;
-	margin-right: 10px;
-}
-
-
-/*  scroller start */
-.audio6_html5.blackControllers .slider-vertical {
-	display:none;
-	position:absolute;
-	width:9px;
-}
-
-.audio6_html5.blackControllers .slider-vertical.ui-slider { position: relative;}
-.audio6_html5.blackControllers .slider-vertical.ui-slider .ui-slider-handle { position: absolute; z-index: 2; width: 9px; height: 16px; cursor: pointer; background:url(controllers/blackControllers/scrollerFaceOFF.png) 0 0 no-repeat; }
-.audio6_html5.blackControllers .slider-vertical.ui-slider .ui-slider-handle:hover {  background:url(controllers/blackControllers/scrollerFaceON.png) 0 0 no-repeat; }
-.audio6_html5.blackControllers .slider-vertical.ui-slider .ui-slider-range { position: absolute; z-index: 1; display: block; border: 0; }
-
-
-.audio6_html5.blackControllers .slider-vertical.ui-slider-vertical { width: 9px; height: 100px; }
-.audio6_html5.blackControllers .slider-vertical.ui-slider-vertical .ui-slider-handle { left: 0px; margin-left: 0px; margin-bottom: -16px;; border: 0; }
-.audio6_html5.blackControllers .slider-vertical.ui-slider-vertical .ui-slider-range { left: 0; width: 100%; }
-.audio6_html5.blackControllers .slider-vertical.ui-slider-vertical .ui-slider-range-min { bottom: 0; }
-.audio6_html5.blackControllers .slider-vertical.ui-slider-vertical .ui-slider-range-max { top: 0; }
-
-
-/* Component containers
-----------------------------------*/
-.audio6_html5.blackControllers .slider-vertical.ui-widget-content { /*background: #ff7800;*/}
-.audio6_html5.blackControllers .slider-vertical .ui-widget-header { /*background: #24ff00;*/ }
-
-
-/* Corner radius */
-.audio6_html5.blackControllers .slider-vertical.ui-corner-all {}
-
-/*  scroller end */
-
